sunvox_lib/sunvox.h

/*
   sv_update_input() - 
   handle input ON/OFF requests to enable/disable input ports of the sound card
   (for example, after the Input module creation).
   Call it from the main thread only, where the SunVox sound stream is not locked.
*/
int sv_update_input( void ) SUNVOX_FN_ATTR;
/*
   sv_audio_callback() - get the next piece of SunVox audio from the Output module.
   With sv_audio_callback() you can ignore the built-in SunVox sound output mechanism and use some other sound system.
   SV_INIT_FLAG_USER_AUDIO_CALLBACK flag in sv_init() must be set.
   Parameters:
     buf - destination buffer of type int16_t (if SV_INIT_FLAG_AUDIO_INT16 used in sv_init())
           or float (if SV_INIT_FLAG_AUDIO_FLOAT32 used in sv_init());
           stereo data will be interleaved in this buffer: LRLR... (LR is a single frame (Left+Right));
     frames - number of frames in destination buffer;
     latency - audio latency (in frames);
     out_time - buffer output time (in system ticks);
   Return values: 0 - silence, the output buffer is filled with zeros; 1 - the output buffer is filled.
   Example 1 (simplified, without accurate time sync) - suitable for most cases:
     sv_audio_callback( buf, frames, 0, sv_get_ticks() );
   Example 2 (accurate time sync) - when you need to maintain exact time intervals between incoming events (notes, commands, etc.):
     user_out_time = ... ; //output time in user time space (depends on your own implementation)
     user_cur_time = ... ; //current time in user time space
     user_ticks_per_second = ... ; //ticks per second in user time space
     user_latency = user_out_time - user_cur_time; //latency in user time space
     uint32_t sunvox_latency = ( user_latency * sv_get_ticks_per_second() ) / user_ticks_per_second; //latency in system time space
     uint32_t latency_frames = ( user_latency * sample_rate_Hz ) / user_ticks_per_second; //latency in frames
     sv_audio_callback( buf, frames, latency_frames, sv_get_ticks() + sunvox_latency );
*/
int sv_audio_callback( void* buf, int frames, int latency, uint32_t out_time ) SUNVOX_FN_ATTR;
/*
   sv_audio_callback2() - send some data to the Input module and receive the filtered data from the Output module.
   It's the same as sv_audio_callback() but you also can specify the input buffer.
   Parameters:
     ...
     in_type - input buffer type: 0 - int16_t (16bit integer); 1 - float (32bit floating point);
     in_channels - number of input channels;
     in_buf - input buffer; stereo data must be interleaved in this buffer: LRLR... ; where the LR is the one frame (Left+Right channels);
*/
int sv_audio_callback2( void* buf, int frames, int latency, uint32_t out_time, int in_type, int in_channels, void* in_buf ) SUNVOX_FN_ATTR;
/*
   sv_open_slot(), sv_close_slot(), sv_lock_slot(), sv_unlock_slot() - 
   open/close/lock/unlock sound slot for SunVox.
   You can use several slots simultaneously (each slot with its own SunVox engine).
   Use lock/unlock when you simultaneously read and modify SunVox data from different threads (for the same slot); 
   example:
     thread 1: sv_lock_slot(0); sv_get_module_flags(0,mod1); sv_unlock_slot(0);
     thread 2: sv_lock_slot(0); sv_remove_module(0,mod2); sv_unlock_slot(0);
   Some functions (marked as "USE LOCK/UNLOCK") can't work without lock/unlock at all.
*/
int sv_open_slot( int slot ) SUNVOX_FN_ATTR;
int sv_close_slot( int slot ) SUNVOX_FN_ATTR;
int sv_lock_slot( int slot ) SUNVOX_FN_ATTR;
int sv_unlock_slot( int slot ) SUNVOX_FN_ATTR;
/*
   sv_load(), sv_load_from_memory() - 
   load SunVox project from the file or from the memory block.
*/
int sv_load( int slot, const char* name ) SUNVOX_FN_ATTR;
int sv_load_from_memory( int slot, void* data, uint32_t data_size ) SUNVOX_FN_ATTR;
/*
   sv_save() - save project to the file;
*/
int sv_save( int slot, const char* name ) SUNVOX_FN_ATTR;
/*
   sv_play() - play from the current position;
   sv_play_from_beginning() - play from the beginning (line 0);
   sv_stop(): first call - stop playing; second call - reset all SunVox activity and switch the engine to standby mode;
   sv_pause() - pause the audio stream on the specified slot;
   sv_resume() - resume the audio stream on the specified slot;
   sv_sync_resume() - wait for sync (pattern effect 0x33 on any slot) and resume the audio stream on the specified slot;
*/
int sv_play( int slot ) SUNVOX_FN_ATTR;
int sv_play_from_beginning( int slot ) SUNVOX_FN_ATTR;
int sv_stop( int slot ) SUNVOX_FN_ATTR;
int sv_pause( int slot ) SUNVOX_FN_ATTR;
int sv_resume( int slot ) SUNVOX_FN_ATTR;
int sv_sync_resume( int slot ) SUNVOX_FN_ATTR;
/*
   sv_set_autostop(), sv_get_autostop() -
   autostop values: 0 - disable autostop; 1 - enable autostop.
   When autostop is OFF, the project plays endlessly in a loop.
*/
int sv_set_autostop( int slot, int autostop ) SUNVOX_FN_ATTR;
int sv_get_autostop( int slot ) SUNVOX_FN_ATTR;
/*
   sv_end_of_song() return values: 0 - song is playing now; 1 - stopped. 
*/
int sv_end_of_song( int slot ) SUNVOX_FN_ATTR;
/*
*/
int sv_rewind( int slot, int line_num ) SUNVOX_FN_ATTR;
/*
   sv_volume() - set volume from 0 (min) to 256 (max 100%);
   negative values are ignored;
   return value: previous volume;
*/
int sv_volume( int slot, int vol ) SUNVOX_FN_ATTR;
/*
   sv_set_event_t() - set the timestamp of events to be sent by sv_send_event()
   Parameters:
     slot;
     set: 1 - set; 0 - reset (use automatic time setting - the default mode);
     t: timestamp (in system ticks).
   Examples:
     sv_set_event_t( slot, 1, 0 ) //not specified - further events will be processed as quickly as possible
     sv_set_event_t( slot, 1, sv_get_ticks() ) //time when the events will be processed = NOW + sound latancy * 2
*/
int sv_set_event_t( int slot, int set, int t ) SUNVOX_FN_ATTR;
/*
   sv_send_event() - send an event (note ON, note OFF, controller change, etc.)
   Parameters:
     slot;
     track_num - track number within the pattern;
     note: 0 - nothing; 1..127 - note num; 128 - note off; 129, 130... - see NOTECMD_xxx defines;
     vel: velocity 1..129; 0 - default;
     module: 0 (empty) or module number + 1 (1..65535);
     ctl: 0xCCEE. CC - number of a controller (1..255). EE - effect;
     ctl_val: value of controller or effect.
*/
int sv_send_event( int slot, int track_num, int note, int vel, int module, int ctl, int ctl_val ) SUNVOX_FN_ATTR;
/*
*/
int sv_get_current_line( int slot ) SUNVOX_FN_ATTR; /* Get current line number */
int sv_get_current_line2( int slot ) SUNVOX_FN_ATTR; /* Get current line number in fixed point format 27.5 */
int sv_get_current_signal_level( int slot, int channel ) SUNVOX_FN_ATTR; /* From 0 to 255 */
/*
*/
const char* sv_get_song_name( int slot ) SUNVOX_FN_ATTR;
int sv_get_song_bpm( int slot ) SUNVOX_FN_ATTR;
int sv_get_song_tpl( int slot ) SUNVOX_FN_ATTR;
/*
   sv_get_song_length_frames(), sv_get_song_length_lines() -
   get the project length.
   Frame is one discrete of the sound. Sample rate 44100 Hz means, that you hear 44100 frames per second.
*/
uint32_t sv_get_song_length_frames( int slot ) SUNVOX_FN_ATTR;
uint32_t sv_get_song_length_lines( int slot ) SUNVOX_FN_ATTR;
/*
   sv_get_time_map()
   Parameters:
     slot;
     start_line - first line to read (usually 0);
     len - number of lines to read;
     dest - pointer to the buffer (size = len*sizeof(uint32_t)) for storing the map values;
     flags:
       SV_TIME_MAP_SPEED: dest[X] = BPM | ( TPL << 16 ) (speed at the beginning of line X);
       SV_TIME_MAP_FRAMECNT: dest[X] = frame counter at the beginning of line X;
   Return value: 0 if successful, or negative value in case of some error.
*/
int sv_get_time_map( int slot, int start_line, int len, uint32_t* dest, int flags ) SUNVOX_FN_ATTR;