lib/src/libsunvox_generated_bindings.dart


  int sv_update_input() {
    return _sv_update_input();
  }

  late final _sv_update_inputPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('sv_update_input');
  late final _sv_update_input =
      _sv_update_inputPtr.asFunction<int Function()>();

  int sv_audio_callback(
    ffi.Pointer<ffi.Void> buf,
    int frames,
    int latency,
    int out_time,
  ) {
    return _sv_audio_callback(
      buf,
      frames,
      latency,
      out_time,
    );
  }

  late final _sv_audio_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Int32, ffi.Int32,
              ffi.Uint32)>>('sv_audio_callback');
  late final _sv_audio_callback = _sv_audio_callbackPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int, int, int)>();

  int sv_audio_callback2(
    ffi.Pointer<ffi.Void> buf,
    int frames,
    int latency,
    int out_time,
    int in_type,
    int in_channels,
    ffi.Pointer<ffi.Void> in_buf,
  ) {
    return _sv_audio_callback2(
      buf,
      frames,
      latency,
      out_time,
      in_type,
      in_channels,
      in_buf,
    );
  }

  late final _sv_audio_callback2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Void>,
              ffi.Int32,
              ffi.Int32,
              ffi.Uint32,
              ffi.Int32,
              ffi.Int32,
              ffi.Pointer<ffi.Void>)>>('sv_audio_callback2');
  late final _sv_audio_callback2 = _sv_audio_callback2Ptr.asFunction<
      int Function(ffi.Pointer<ffi.Void>, int, int, int, int, int,
          ffi.Pointer<ffi.Void>)>();

  int sv_open_slot(
    int slot,
  ) {
    return _sv_open_slot(
      slot,
    );
  }

  late final _sv_open_slotPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_open_slot');
  late final _sv_open_slot = _sv_open_slotPtr.asFunction<int Function(int)>();

  int sv_close_slot(
    int slot,
  ) {
    return _sv_close_slot(
      slot,
    );
  }

  late final _sv_close_slotPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_close_slot');
  late final _sv_close_slot = _sv_close_slotPtr.asFunction<int Function(int)>();

  int sv_lock_slot(
    int slot,
  ) {
    return _sv_lock_slot(
      slot,
    );
  }

  late final _sv_lock_slotPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_lock_slot');
  late final _sv_lock_slot = _sv_lock_slotPtr.asFunction<int Function(int)>();

  int sv_unlock_slot(
    int slot,
  ) {
    return _sv_unlock_slot(
      slot,
    );
  }

  late final _sv_unlock_slotPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_unlock_slot');
  late final _sv_unlock_slot =
      _sv_unlock_slotPtr.asFunction<int Function(int)>();

  int sv_load(
    int slot,
    ffi.Pointer<ffi.Int8> name,
  ) {
    return _sv_load(
      slot,
      name,
    );
  }

  late final _sv_loadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Pointer<ffi.Int8>)>>('sv_load');
  late final _sv_load =
      _sv_loadPtr.asFunction<int Function(int, ffi.Pointer<ffi.Int8>)>();

  int sv_load_from_memory(
    int slot,
    ffi.Pointer<ffi.Void> data,
    int data_size,
  ) {
    return _sv_load_from_memory(
      slot,
      data,
      data_size,
    );
  }

  late final _sv_load_from_memoryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Pointer<ffi.Void>,
              ffi.Uint32)>>('sv_load_from_memory');
  late final _sv_load_from_memory = _sv_load_from_memoryPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Void>, int)>();

  int sv_save(
    int slot,
    ffi.Pointer<ffi.Int8> name,
  ) {
    return _sv_save(
      slot,
      name,
    );
  }

  late final _sv_savePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Pointer<ffi.Int8>)>>('sv_save');
  late final _sv_save =
      _sv_savePtr.asFunction<int Function(int, ffi.Pointer<ffi.Int8>)>();

  int sv_play(
    int slot,
  ) {
    return _sv_play(
      slot,
    );
  }

  late final _sv_playPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>('sv_play');
  late final _sv_play = _sv_playPtr.asFunction<int Function(int)>();

  int sv_play_from_beginning(
    int slot,
  ) {
    return _sv_play_from_beginning(
      slot,
    );
  }

  late final _sv_play_from_beginningPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_play_from_beginning');
  late final _sv_play_from_beginning =
      _sv_play_from_beginningPtr.asFunction<int Function(int)>();

  int sv_stop(
    int slot,
  ) {
    return _sv_stop(
      slot,
    );
  }

  late final _sv_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>('sv_stop');
  late final _sv_stop = _sv_stopPtr.asFunction<int Function(int)>();

  int sv_pause(
    int slot,
  ) {
    return _sv_pause(
      slot,
    );
  }

  late final _sv_pausePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>('sv_pause');
  late final _sv_pause = _sv_pausePtr.asFunction<int Function(int)>();

  int sv_resume(
    int slot,
  ) {
    return _sv_resume(
      slot,
    );
  }

  late final _sv_resumePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>('sv_resume');
  late final _sv_resume = _sv_resumePtr.asFunction<int Function(int)>();

  int sv_sync_resume(
    int slot,
  ) {
    return _sv_sync_resume(
      slot,
    );
  }

  late final _sv_sync_resumePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_sync_resume');
  late final _sv_sync_resume =
      _sv_sync_resumePtr.asFunction<int Function(int)>();

  int sv_set_autostop(
    int slot,
    int autostop,
  ) {
    return _sv_set_autostop(
      slot,
      autostop,
    );
  }

  late final _sv_set_autostopPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_set_autostop');
  late final _sv_set_autostop =
      _sv_set_autostopPtr.asFunction<int Function(int, int)>();

  int sv_get_autostop(
    int slot,
  ) {
    return _sv_get_autostop(
      slot,
    );
  }

  late final _sv_get_autostopPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_get_autostop');
  late final _sv_get_autostop =
      _sv_get_autostopPtr.asFunction<int Function(int)>();

  int sv_end_of_song(
    int slot,
  ) {
    return _sv_end_of_song(
      slot,
    );
  }

  late final _sv_end_of_songPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_end_of_song');
  late final _sv_end_of_song =
      _sv_end_of_songPtr.asFunction<int Function(int)>();

  int sv_rewind(
    int slot,
    int line_num,
  ) {
    return _sv_rewind(
      slot,
      line_num,
    );
  }

  late final _sv_rewindPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_rewind');
  late final _sv_rewind = _sv_rewindPtr.asFunction<int Function(int, int)>();

  int sv_volume(
    int slot,
    int vol,
  ) {
    return _sv_volume(
      slot,
      vol,
    );
  }

  late final _sv_volumePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_volume');
  late final _sv_volume = _sv_volumePtr.asFunction<int Function(int, int)>();

  int sv_set_event_t(
    int slot,
    int set1,
    int t,
  ) {
    return _sv_set_event_t(
      slot,
      set1,
      t,
    );
  }

  late final _sv_set_event_tPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Int32, ffi.Int32, ffi.Int32)>>('sv_set_event_t');
  late final _sv_set_event_t =
      _sv_set_event_tPtr.asFunction<int Function(int, int, int)>();

  int sv_send_event(
    int slot,
    int track_num,
    int note,
    int vel,
    int module,
    int ctl,
    int ctl_val,
  ) {
    return _sv_send_event(
      slot,
      track_num,
      note,
      vel,
      module,
      ctl,
      ctl_val,
    );
  }

  late final _sv_send_eventPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Int32, ffi.Int32, ffi.Int32,
              ffi.Int32, ffi.Int32, ffi.Int32)>>('sv_send_event');
  late final _sv_send_event = _sv_send_eventPtr
      .asFunction<int Function(int, int, int, int, int, int, int)>();

  int sv_get_current_line(
    int slot,
  ) {
    return _sv_get_current_line(
      slot,
    );
  }

  late final _sv_get_current_linePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_get_current_line');
  late final _sv_get_current_line =
      _sv_get_current_linePtr.asFunction<int Function(int)>();

  int sv_get_current_line2(
    int slot,
  ) {
    return _sv_get_current_line2(
      slot,
    );
  }

  late final _sv_get_current_line2Ptr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_get_current_line2');
  late final _sv_get_current_line2 =
      _sv_get_current_line2Ptr.asFunction<int Function(int)>();

  int sv_get_current_signal_level(
    int slot,
    int channel,
  ) {
    return _sv_get_current_signal_level(
      slot,
      channel,
    );
  }

  late final _sv_get_current_signal_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
          'sv_get_current_signal_level');
  late final _sv_get_current_signal_level =
      _sv_get_current_signal_levelPtr.asFunction<int Function(int, int)>();

  ffi.Pointer<ffi.Int8> sv_get_song_name(
    int slot,
  ) {
    return _sv_get_song_name(
      slot,
    );
  }

  late final _sv_get_song_namePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function(ffi.Int32)>>(
          'sv_get_song_name');
  late final _sv_get_song_name =
      _sv_get_song_namePtr.asFunction<ffi.Pointer<ffi.Int8> Function(int)>();

  int sv_get_song_bpm(
    int slot,
  ) {
    return _sv_get_song_bpm(
      slot,
    );
  }

  late final _sv_get_song_bpmPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_get_song_bpm');
  late final _sv_get_song_bpm =
      _sv_get_song_bpmPtr.asFunction<int Function(int)>();

  int sv_get_song_tpl(
    int slot,
  ) {
    return _sv_get_song_tpl(
      slot,
    );
  }

  late final _sv_get_song_tplPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'sv_get_song_tpl');
  late final _sv_get_song_tpl =
      _sv_get_song_tplPtr.asFunction<int Function(int)>();

  int sv_get_song_length_frames(
    int slot,
  ) {
    return _sv_get_song_length_frames(
      slot,
    );
  }

  late final _sv_get_song_length_framesPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Int32)>>(
          'sv_get_song_length_frames');
  late final _sv_get_song_length_frames =
      _sv_get_song_length_framesPtr.asFunction<int Function(int)>();

  int sv_get_song_length_lines(
    int slot,
  ) {
    return _sv_get_song_length_lines(
      slot,
    );
  }

  late final _sv_get_song_length_linesPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Int32)>>(
          'sv_get_song_length_lines');
  late final _sv_get_song_length_lines =
      _sv_get_song_length_linesPtr.asFunction<int Function(int)>();

  int sv_get_time_map(
    int slot,
    int start_line,
    int len,
    ffi.Pointer<ffi.Uint32> dest,
    int flags,
  ) {
    return _sv_get_time_map(
      slot,
      start_line,
      len,
      dest,
      flags,
    );
  }

  late final _sv_get_time_mapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Int32, ffi.Int32,
              ffi.Pointer<ffi.Uint32>, ffi.Int32)>>('sv_get_time_map');
  late final _sv_get_time_map = _sv_get_time_mapPtr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Uint32>, int)>();
